feat: migrate spring boot application to quarkus application (#30)
* feat: migrate spring boot application to quarkus application

- Configured Gradle with Kotlin DSL
- Added Quarkus 3.10.0 and JavaFX 17 dependencies
- Set up basic project structure
- Configured JavaFX scene and controllers
- Included README with project documentation

* feat: update dependencies

- Update java version
- Fix gradle run by main class
- Add logger to main class
- Turn on all linters, except git history

* feat: update dependencies

- Update junit test dependencies
- Update gradle